# api-spec

./: .editorconfig  .eslintrc.js  .flake8  .gitignore  .lintstagedrc.json  .openapi-generator-ignore  .prettierignore  .prettierrc  .prettierrc.json  .releaserc  .releaserc.json  .skip-ci  .spectral.yml  CHANGELOG.md  GITHUB-ISSUE-TEMPLATE.md  LICENSE  OPENAPI-GENERATION.md  PR-TEMPLATE.md  PROJECT-SUMMARY.md  README.md  REPO-SETUP.md  SETUP.md  SPRING-SERVER-CONFIG-FIX.md  TYPESCRIPT-SETUP-SUMMARY.md  api-spec.yml  classpath.txt  commitlint.config.js  composer.json  develop-protection.json  effective-pom.xml  issue-22-body.md  issue-body.md  issue-details.txt  issue-python-packaging.md  java-client-generator.yml  jest.config.js  master-protection.json  maven-central-settings-example.xml  maven-settings-example.xml  npm-issue.md  (+18 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/instructions/: workspace.instructions.md  (+3 more)
.husky/: commit-msg  pre-commit
.openapi-generator/: FILES  api-spec.yml-generate-spring-server.sha256
changelogs/: BUILD-SUCCESS-SUMMARY.md  CLEANUP-merged-branches.md  FEATURE-java-code-generation-complete.md  FEATURE-npm-publication-complete.md  FEATURE-npm-publication-prep.md  FEATURE-python-packaging.md  FEATURE-spring-boot-modernization-issue-27.md  FIX-ISSUE-31-github-cli-maven-fixes.md  FIX-generated-sources-path-issue-27.md  FIX-vscode-java-imports-resolution.md  GITHUB-REPO-SETUP-$(Get-Date -Format 'yyyyMMdd-HHmm').md  IMPLEMENTATION-SUMMARY.md  ISSUE-1.md  ISSUE-12.md  ISSUE-33.md  ISSUE-43-PIPELINE-IMPROVEMENTS.md  ISSUE-45-COMPLETE-SUMMARY.md  ISSUE-45-NPM-WORKSPACE-INTEGRATION.md  ISSUE-CODE-GENERATION.md  MIGRATION-SUMMARY.md  OPENAPI-GENERATION.md  OPENAPI-GENERATOR-TYPESCRIPT-AXIOS-MIGRATION.md  PACKAGE-JSON-CLEANUP.md  PROJECT-COMPLETE-e36c3d0.md  TYPESCRIPT-SETUP-SUMMARY.md
docs/: api-docs.html
openapi-config/: java-client-config.json  java-server-config.json
openapi-generator-config/: spring-server.json  typescript-axios.json
scripts/: dev-utils.js  sync-versions.js
src/: ApiSpec.php
tests/: ApiSpecTest.php  jest.d.ts  setup-new.ts  setup.ts
types/: index.ts
(+104 files in other folders)
