[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xstr-me-api-spec"
version = "0.0.1a1"
description = "XStr.me API OpenAPI Specification for Python"
authors = [
    {name = "XStr.me Team", email = "dev@xstr.me"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["api", "openapi", "xstr", "specification", "swagger"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "build>=0.8",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://xstr.me"
Documentation = "https://api.xstr.me/docs"
Repository = "https://github.com/xstr-me/api-spec"
Issues = "https://github.com/xstr-me/api-spec/issues"
Changelog = "https://github.com/xstr-me/api-spec/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-data]
"xstr_me_api_spec" = ["*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=xstr_me_api_spec --cov-report=term-missing --cov-report=html"
